--- a/PBSS/form_fba/templates/index.html
+++ b/PBSS/form_fba/templates/index.html
@@ -12,16 +12,17 @@
           <p style="text-align: center;">Manage work on daily basis.</p>
         </div>
       </div>
-         <div class="container">
-                    <div class="row heading">
+
+                   <div class="row heading">
                         <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a></p>
-                            <h2 style="text-align: center;">Functional Behaviour Assessment</h2>
-                    <br><br>
-        <div class="container">
+                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Functional Behaviour Assessment</a></p>
+                            <h4>Functional Behaviour Assessment</h4>
+                        </div>
+                    </div>
+
                <form method="POST" class="post-form" action="/std/">
     {% csrf_token %}
-    <div class="container">
+
 
         <br>
 
@@ -60,26 +61,9 @@
 
 
 
-    </div>
 </form>
 
-        <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-
-        </div>
-        </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-
-                </div>
-        </div>
-            <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-
-          </div>
-        </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-        </div>
-                        </div></div></div></div>
+        </div></div></div></div>
   </main>
     </div>
 
