--- a/PBSS/form_fba/templates/view.html
+++ b/PBSS/form_fba/templates/view.html
@@ -1,3 +1,7 @@
+<!--{%  extends "users/dashboardbase.html" %}-->
+<!--{% load crispy_forms_tags %}-->
+<!--{% block content %}-->
+<!--{% load static %}-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +11,7 @@
 <body>
     <table class = "table table-striped table-bordered table-sm">
     <thead class="thead-dark">
+    <br><br>
     <tr>
         <th>User</th>
         <th>Anticedent</th>
@@ -35,3 +40,4 @@
 
 </body>
 </html>
+<!--{% endblock content %}-->
