--- a/PBSS/form_fba/templates/index.html
+++ b/PBSS/form_fba/templates/index.html
@@ -1,3 +1,7 @@
+<!--{%  extends "users/dashboardbase.html" %}-->
+<!--{% load crispy_forms_tags %}-->
+<!--{% block content %}-->
+<!--{% load static %}-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -51,3 +55,4 @@
 </form>
 </body>
 </html>
+<!--{% endblock content %}-->
