--- a/PBSS/users/templates/users/dashboardbase.html
+++ b/PBSS/users/templates/users/dashboardbase.html
@@ -81,7 +81,7 @@
             </a>
           </li>
           <li class="sidebar-dropdown">
-            <a href="{% url 'index' %}" >
+            <a href="{% url 'std' %}" >
               <span>FBA form</span>
             </a>
           </li>
