--- a/PBSS/users/templates/users/post_form.html
+++ b/PBSS/users/templates/users/post_form.html
@@ -3,8 +3,7 @@
 {% block content %}
 {% load static %}
 
-
-<!--<div id="page-content" class="index-page container-fluid">-->
+index-page container-fluid">-->
 <!--                <section id="" class="box-content box-1" style="background: white; margin-top: 3%;">-->
 <!--                    <div class="container-fluid">-->
 <!--                        <div class="row heading">-->
@@ -232,6 +231,7 @@
                             <div class="intro">Be a part of positive behaviour support.</div>
                         </div>
                     </div>
+
                     <div class="row">
                         <div class="col-sm-6 box-item">
 <!--                            <img src="{% static 'images/password.png' %}" alt="checklist" class="password">-->
