--- a/PBSS/drop/templates/drop/dropbase.html
+++ b/PBSS/drop/templates/drop/dropbase.html
@@ -20,64 +20,25 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <title>Positive Behaviour</title>
+    {% if title %}
+        <title>Positive Behaviour - {{ title }}</title>
+    {% else %}
+        <title>Positive Behaviour</title>
+    {% endif %}
 </head>
+
 <body>
 	<!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
                 <a class="navbar-brand page-scroll" href="{% url 'index' %}">PBSS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-					<li>
-                        <a class="page-scroll" href="{% url 'index' %}">Home</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About us</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-					<li>
-                        <a class="page-scroll" href="#fbaform">FBA Form</a>
-                    </li>
-                    <li>
-                         {% if user.is_authenticated %}
-                    <li>
-                                 <a class="page-scroll" href="{% url 'client' %}">Client</a>
-                             </li>
-                             <li>
-                                 <a class="page-scroll" href="{% url 'profile' %}">Profile</a>
-                             </li>
-                             <li>
-                                 <a class="page-scroll" href="{% url 'logout' %}">Logout</a>
-                             </li>
-                     </li>
-                             <li>
 
-                         {% else %}
-                            <a class="page-scroll" href="#portal">Signup</a>
-                        </li>
-                         {% endif %}
-
-                        <li>
-                            <a class="page-scroll" href="{% url 'contact' %}">Contact us</a>
-                    </li>
-                </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -97,7 +58,7 @@
 					<div class="col-md-4 col-footer footer-1">
                         <div class=""><h6>PBSS</h6></div>
 						<div class="content">
-							<p>A PBS plan will tell the people what needs to be done proactively to prevent the challenging behaviour. Proactive strategy will improve the quality of life by supporting throughout the process. Our web application will aid all the people who want to proactively prevent a challenging behaviour by submitting a Functional Behaviour Assessment (FBA) form which will be analysed by the team leader and strategies will be developed to counter the behaviour.  </p>
+							<p>A PBS plan will tell the people what needs to be done proactively to prevent the challenging behaviour. Proactive strategy will improve the quality of life by supporting throughout the process. Our web application will aid all the people who want to proactively prevent a challenging behaviour by submitting a Functional Behaviour Assessment (FBA) form which will be analysed by the team leader and strategies will be developed to counter the behaviour. </p>
                         </div>
 					</div>
 
@@ -116,20 +77,16 @@
 
 
                     <div class="col-md-4 col-footer footer-2">
-						<div class=""><h6>Subscribe us</h6></div>
+						<div class=""><h6>Subscribe</h6></div>
 						<div class="content">
 							<p></p>
-							<div class="subscribe-form">
-								 <form method="post">{% csrf_token %}
-                <div class = "form-group" style="display: block;">
-                    {{ form }}<br>
-                    <span class="input-group-btn">
-                       <button type="submit" name="Submit" class="btn btn-4 btn-block" style="width: 100%; margin-top: 4%;">Subscribe</button>
-                    </span>
-                </div>
-            </form>
-							<!--
-							-->
+							<div class="subscribe-form" >
+								<form method="get" action="/search" id="subscribe">
+									<div class="form-group">
+										<input type="text" class="form-control input-lg" name="subscribe" placeholder="Enter your email address...  " required="required" />
+									</div>
+									<button type="submit" name="Submit" class="btn btn-4 btn-block">Subscribe</button>
+								</form>
 							</div>
 						</div>
 					</div>
@@ -160,7 +117,7 @@
 							</li>
 							•<li><a href="#">Terms of Use</a>
 							</li>
-                            •<li><a href="/positivebehaviour/sitemap/">Sitemap</a>
+                            •<li><a href="#">Sitemap</a>
 							</li>
 						</ul>
 					</div>
