--- a/PBSS/form_fba/templates/edit.html
+++ b/PBSS/form_fba/templates/edit.html
@@ -21,6 +21,7 @@
                     </div>
 
                <form method="POST" class="post-form" action="/std/">
+                   <input type="hidden" name="id" id="id" required maxlength="20" value="{{ form_fba.id }}"/>
     {% csrf_token %}
 
 
@@ -39,7 +40,7 @@
     </div>
 
      <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Antecedent</label>
+        <label class="col-sm-2 col-form-label">Anticident</label>
         <div class="col-sm-4">{{ form.anticedent }} </div>
 
     </div>  <div class="form-group row">
