--- a/PBSS/form_fba/templates/edit.html
+++ b/PBSS/form_fba/templates/edit.html
@@ -12,7 +12,6 @@
           <p style="text-align: center;">Manage work on daily basis.</p>
         </div>
       </div>
-
                    <div class="row heading">
                         <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
                             <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Functional Behaviour Assessment</a></p>
@@ -20,7 +19,7 @@
                         </div>
                     </div>
 
-               <form method="POST" class="post-form" action="/std/">
+               <form method="POST" class="post-form" action="/update/{{ form_fba.id }}">
                    <input type="hidden" name="id" id="id" required maxlength="20" value="{{ form_fba.id }}"/>
     {% csrf_token %}
 
@@ -36,34 +35,31 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">User</label>
         <div class="col-sm-4">{{ form.user }} </div>
-
+        <input type="text" name="user" value="{{ form_fba.user }}">
     </div>
 
      <div class="form-group row">
         <label class="col-sm-2 col-form-label">Anticident</label>
         <div class="col-sm-4">{{ form.anticedent }} </div>
-
-    </div>  <div class="form-group row">
+        <input type="text" name="anticedent" value="{{ form_fba.anticedent }}">
+    </div>
+       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Behaviour</label>
         <div class="col-sm-4">{{ form.behaviour }} </div>
-
-    </div>  <div class="form-group row">
+        <input type="text" name="behaviour" value="{{ form_fba.behaviour }}">
+    </div>
+                   <div class="form-group row">
         <label class="col-sm-2 col-form-label">Consequence</label>
         <div class="col-sm-4">{{ form.consequence }} </div>
-
-    </div>  <div class="form-group row">
+        <input type="text" name="consequence" value="{{ form_fba.consequence }}">
+    </div>
+                   <div class="form-group row">
         <label class="col-sm-2 col-form-label">Intensity</label>
         <div class="col-sm-4">{{ form.intensity }} </div>
-
+        <input type="text" name="intensity" value="{{ form_fba.intensity }}">
     </div>
-
-
-        <button type="submit" class="btn btn-primary">Save</button>
-
-
-
+        <button type="submit" class="btn btn-primary">Update Information</button>
 </form>
-
         </div></div></div></div>
   </main>
     </div>
