--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -26,6 +26,9 @@
                             <div class="intro">Date Of Birth: {{post.DOB}}</div>
                             <div class="intro">Email-id: {{post.email}}</div>
                             <div class="intro">Comment: {{post.content}}</div>
+                            <div class="intro">Location: {{post.location}}</div>
+                            <div class="intro">Gender: {{post.gender}}</div>
+                            <div class="intro">History: {{post.history}}</div>
                 {% endfor %}
                 <br><br>
                 {% if is_paginated %}
