--- a/PBSS/users/templates/users/dashboardbase.html
+++ b/PBSS/users/templates/users/dashboardbase.html
@@ -91,6 +91,11 @@
               <span>BR Report</span>
             </a>
           </li>
+            <li class="sidebar-dropdown">
+            <a href="#" >
+              <span>BR Report (final)</span>
+            </a>
+          </li>
           <li class="sidebar-dropdown">
             <a href="{% url 'std' %}" >
               <span>FBA form</span>
