--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -15,42 +15,48 @@
          <div class="container">
                     <div class="row heading">
                         <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a></p>
+                          <!--  <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a></p> -->
                             <h2 style="text-align: center;">Client Lists - ({{page_obj.paginator.count}})</h2>
                     <br><br>
         <div class="container">
                 {% for post in posts %}
-                <h2><a class="article-title" href="{% url 'profile' post.id %}">{{ post.client_name }}</a> </h2>
-                             <a class="mr-2" href="{% url 'user-client' post.author.username %}">By {{post.author}}</a>
-                            <div class="intro"> on {{ post.date_issued }}</div>
-                            <div class="intro">Date Of Birth: {{post.DOB}}</div>
-                            <div class="intro">Email-id: {{post.email}}</div>
-                            <div class="intro">Comment: {{post.content}}</div>
-                            <div class="intro">Location: {{post.location}}</div>
-                            <div class="intro">Gender: {{post.gender}}</div>
-                            <div class="intro">History: {{post.history}}</div>
+                <div class="container" style="-webkit-box-shadow: 0 10px 6px -6px #777;-moz-box-shadow: 0 10px 6px -6px #777;
+            box-shadow: 0 10px 6px -6px #777; margin-bottom: 3%; width: 48%; float: left;">
+                <h2><a class="article-title" style="color: black; font-size: 30px;" href="{% url 'profile' post.id %}">{{ post.client_name }}</a> </h2>
+                             <a class="mr-2" href="{% url 'user-client' post.author.username %}" style="line-height: 2;">By {{post.author}}</a>
+                            <div class="intro" style="float: right;"> on {{ post.date_issued }}</div><br>
+                            <div class="intro" style="line-height: 2; float: right;">Gender: {{post.gender}}</div>
+                            <div class="intro" style="line-height: 2;">Date Of Birth: {{post.DOB}}</div>
+                            <div class="intro" style="line-height: 2;">Email-id: {{post.email}}</div>
+                            <div class="intro" style="line-height: 2;">Location: {{post.location}}</div>
+
+                            <div class="intro" style="line-height: 2;">Comment: {{post.content}}</div>
+                    <div class="intro" style="line-height: 2; font-weight: bold;">History: {{post.history}}</div><br>
+                </div>
+
                 {% endfor %}
+        </div>
                 <br><br>
                 {% if is_paginated %}
                     {% if page_obj.has_previous %}
-                    <a type="button" class="btn btn-info" href="?page=1">First</a>
-                    <a type="button" class="btn btn-info" href="?page={{ page_obj.previous_page_number}}">Previous</a>
+                    <a type="button" class="btn btn-2" href="?page=1">First</a>
+                    <a type="button" class="btn btn-2" href="?page={{ page_obj.previous_page_number}}">Previous</a>
                     {% endif %}
                     {% for num in page_obj.paginator.page_range %}
                         {% if page_obj.number == num %}
-                 <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
+                 <a type="button" class="btn btn-2" href="?page={{ num }}">{{ num }}</a>
                         {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-                 <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
+                 <a type="button" class="btn btn-2" href="?page={{ num }}">{{ num }}</a>
                         {% endif %}
                  {% endfor %}
 
                  {% if page_obj.has_next %}
-                    <a type="button" class="btn btn-info" href="?page={{ page_obj.next_page_number }}">Next</a>
-                    <a type="button" class="btn btn-info" href="?page={{ page_obj.paginator.num_pages}}">Last</a>
+                    <a type="button" class="btn btn-2" href="?page={{ page_obj.next_page_number }}">Next</a>
+                    <a type="button" class="btn btn-2" href="?page={{ page_obj.paginator.num_pages}}">Last</a>
                  {% endif %}
 
                 {% endif %}
-
+        </div>
         <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
 
