--- a/PBSS/users/templates/users/dashboardbase.html
+++ b/PBSS/users/templates/users/dashboardbase.html
@@ -92,7 +92,7 @@
             </a>
           </li>
             <li class="sidebar-dropdown">
-            <a href="#" >
+            <a href="{% url 'brreport' %}" >
               <span>BR Report (final)</span>
             </a>
           </li>
@@ -141,6 +141,7 @@
 	<script src="{% static 'js/jquery-2.1.1.js' %}"></script>
 	<script src="{% static 'js/masonry.pkgd.min.js' %}"></script>
 	<script src="{% static 'js/jquery.flexslider-min.js' %}"></script>
+ <script src= "{% static 'js/option.js' %}"></script>
 	<script src="{% static 'js/main.js' %}"></script> <!-- Resource jQuery -->
 
 	<!-- Bootstrap Core JavaScript -->
