--- a/PBSS/form_fba/templates/brreport.html
+++ b/PBSS/form_fba/templates/brreport.html
@@ -192,7 +192,7 @@
                     <div style="margin-top: 2%;">
                         <input type="button" id="foo" value="Add" />
                         <div style="margin-top: 2%;">
-                        <input type="button" id="#" value="Visualize Chart" />
+                            <a href="{% url 'chart' %}"> <input type="button" id="#"   value="Visualize Chart" /> </a>
                     </div>
                     </div>
 
