--- a/PBSS/users/templates/users/dashboardbase.html
+++ b/PBSS/users/templates/users/dashboardbase.html
@@ -92,7 +92,7 @@
             </a>
           </li>
             <li class="sidebar-dropdown">
-            <a href="#" >
+            <a href="{% url 'brreport' %}" >
               <span>BR Report (final)</span>
             </a>
           </li>
