--- a/PBSS/users/templates/users/user_client.html
+++ b/PBSS/users/templates/users/user_client.html
@@ -1,8 +1,8 @@
-
-{%  extends "users/userbase.html" %}
+{%  extends "users/dashboardbase.html" %}
 {% block content %}
-        {% load static %}
-        {% load crispy_forms_tags %}
+{% load static %}
+{% load crispy_forms_tags %}
+
 <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
