--- a/PBSS/positivebehaviour/templates/positivebehaviour/base.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/base.html
@@ -95,7 +95,9 @@
 					<div class="col-md-4 col-footer footer-1">
                         <div class=""><h6>PBSS</h6></div>
 						<div class="content">
-							<p>A PBS plan will tell the people what needs to be done proactively to prevent the challenging behaviour. Proactive strategy will improve the quality of life by supporting throughout the process. </p>
+							<p>A PBS plan will tell the people what needs to be done proactively to
+                                prevent the challenging behaviour. Proactive strategy will improve the
+                                quality of life by supporting throughout the process. </p>
                         </div>
 					</div>
 
