--- a/PBSS/form_fba/templates/fbaindex.html
+++ b/PBSS/form_fba/templates/fbaindex.html
@@ -30,11 +30,12 @@
 
         <div class="form-group row">
                 <div class="col-sm-12">
-        <p style="margin-bottom: 2%;">Enter your details in FBA form</p>
+        <p style="margin-bottom: 2%;">Hello {{ user.username }}, Please Enter your details in FBA form</p>
                 </div>
         </div>
 
     <div class="form-group row">
+
         <label class="col-sm-2 col-form-label">User</label>
         <div class="col-sm-4">{{ form.user }} </div>
 
