--- a/PBSS/users/templates/users/post_detail.html
+++ b/PBSS/users/templates/users/post_detail.html
@@ -9,32 +9,42 @@
       <div class="row">
         <div class="form-group col-md-12">
           <p style="text-align: center;">Manage work on daily basis.</p>
+
+            <div class="intro" style="float: right; margin-bottom: 0%;"><a class="btn btn-3 btn-lg" type="submit"
+                                                        href="{% url 'client-create' %}">
+              <span>New Client</span>
+            </a>
+            </div>
+
         </div>
       </div>
          <div class="container">
                     <div class="row heading">
-                        <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
+                        <div class="col-lg-12" style="margin-top: 1%; margin-bottom: 3%;">
+
                           <!--  <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a></p> -->
+
 
                     <br><br>
                             <div class="container-fluid">
                  <div class="container" style="-webkit-box-shadow: 0 10px 6px -6px #777;-moz-box-shadow: 0 10px 6px -6px #777;
             box-shadow: 0 10px 6px -6px #777; margin-bottom: 3%; width: 100%; float: left;">
+                               <div class="intro" style="float: right;"><a class="btn btn-2 btn-lg" type="submit" href="{% url 'brreport' %}" > BR Report </a></div>
+                    <div class="intro" style="float: right; margin-right: 1%; ">  <a class="btn btn-2 btn-lg" type="submit" href="{% url 'std' %}" >FBA form </a></div>
                             <h2 style="color: black; font-size: 30px;">{{ object.client_name }} </h2>
                              <a class="mr-2" href="{% url 'user-client' post.author.username %}" style="line-height: 2;">By {{object.author}}</a>
-                            <div class="intro" style="float: right;"> on {{ object.date_issued }}</div><br><br>
+                            <div class="intro" style="float: right; margin-right: 5%;"> on {{ object.date_issued }}</div><br><br>
                             <div class="intro" style="line-height: 2;">Gender: {{object.gender}}</div>
                             <div class="intro" style="line-height: 2;">Date Of Birth: {{object.DOB}}</div>
                             <div class="intro" style="line-height: 2;">Email-id: {{object.email}}</div>
                             <div class="intro" style="line-height: 2;">Location: {{object.location}}</div>
-
                             <div class="intro" style="line-height: 2;">Comment: {{post.content}}</div>
                     <div class="intro" style="line-height: 2; font-weight: bold;">History: {{post.history}}</div><br>
 
                       <br>
                        {% if object.author == user %}
-                                <a class="btn btn-2 btn-lg" type="submit" href="{% url 'client-update' object.id %}">Update</a>
-                                <a class="btn btn-2 btn-lg" type="submit" href="{% url 'client-delete' object.id %}">Delete</a>
+                                <a class="btn btn-2 btn-lg" type="submit" href="{% url 'client-update' object.id %}">Update client</a>
+                                <a class="btn btn-2 btn-lg" type="submit" href="{% url 'client-delete' object.id %}">Delete client</a>
                               {% endif %}
 
                 </div>
