--- a/PBSS/freefbaform/templates/freefbaform/freefbaform.html
+++ b/PBSS/freefbaform/templates/freefbaform/freefbaform.html
@@ -216,7 +216,7 @@
                                     </form>
                                     <div id="Button2">
                         <button class="btn btn-3 btn-sm" onclick="myFunction()" name="print" id="print" style="float: right; ">Print</button>
-                        <a button class="btn btn-3 btn-sm"  style="float: right; margin-right: 2%;" href="{% url 'profile' %}"> Next </a> </button>
+                        <a button class="btn btn-3 btn-sm"  style="float: right; margin-right: 2%;" href="{% url 'client' %}"> Next </a> </button>
                         </div>
 <!--                                    <div id="Button3">-->
 <!--                        <button class="btn btn-3 btn-sm" onclick="saveCookies()" name="print" id="save" style="float: left; ">save cookie</button>-->
