--- a/PBSS/users/templates/users/dashboardbase.html
+++ b/PBSS/users/templates/users/dashboardbase.html
@@ -44,7 +44,7 @@
   <nav id="sidebar" class="sidebar-wrapper">
     <div class="sidebar-content">
       <div class="sidebar-brand">
-          <a class="navbar-brand page-scroll" style="font-size: 26px;" href="{% url 'client' %}">PBSS</a>
+          <a class="navbar-brand page-scroll" style="font-size: 26px;" href="{% url 'index' %}">PBSS</a>
       </div>
         <div>
                         {%  if messages %}
