--- a/PBSS/users/templates/users/register.html
+++ b/PBSS/users/templates/users/register.html
@@ -1,5 +1,4 @@
-
-{%  extends "users/userbase.html" %}
+{%  extends "freefbaform/fbabase.html" %}
 {% block content %}
         {% load static %}
         {% load crispy_forms_tags %}
