--- a/PBSS/freefbaform/templates/freefbaform/fbabase.html
+++ b/PBSS/freefbaform/templates/freefbaform/fbabase.html
@@ -33,9 +33,47 @@
 	<div id="Header">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
+
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <a class="navbar-brand page-scroll" href="{% url 'index' %}">PBSS</a>
+            </div>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+					<li>
+                        <a class="page-scroll" href="{% url 'index' %}">Home</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="{% url 'index' %}">About us</a>
+                    </li>
+                    <li>
+                         {% if user.is_authenticated %}
+
+                             <li>
+                                 <a class="page-scroll" href="{% url 'client' %}">Profile</a>
+                             </li>
+                             <li>
+                                 <a class="page-scroll" href="{% url 'logout' %}">Logout</a>
+                             </li>
+                     </li>
+                             <li>
+
+                         {% else %}
+                            <a class="page-scroll" href="{% url 'login' %}">My Account</a>
+                        </li>
+                         {% endif %}
+
+					<li>
+                        <a class="page-scroll" href="{% url 'freefbaform' %}">FBA Form</a>
+                    </li>
+
+                        <li>
+                            <a class="page-scroll" href="{% url 'contact' %}">Contact us</a>
+                    </li>
+                </ul>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
