--- a/PBSS/positivebehaviour/templates/positivebehaviour/base.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/base.html
@@ -58,6 +58,9 @@
                              <li>
                                  <a class="page-scroll" href="{% url 'logout' %}">Logout</a>
                              </li>
+                            <li>
+                                 <a class="page-scroll" href="{% url 'BL_view' %}">Business Leader</a>
+                             </li>
                      </li>
                              <li>
 
