Changes to to the client view page
and other changes

--- a/PBSS/users/templates/users/dashboardbase.html
+++ b/PBSS/users/templates/users/dashboardbase.html
@@ -88,19 +88,19 @@
           </li>
           <li class="sidebar-dropdown">
             <a href="{% url 'chart' %}" >
-              <span>BR Report</span>
+              <span>Charts</span>
             </a>
           </li>
-            <li class="sidebar-dropdown">
-            <a href="{% url 'brreport' %}" >
-              <span>BR Report (final)</span>
-            </a>
-          </li>
-          <li class="sidebar-dropdown">
-            <a href="{% url 'std' %}" >
-              <span>FBA form</span>
-            </a>
-          </li>
+<!--            <li class="sidebar-dropdown">-->
+<!--            <a href="{% url 'brreport' %}" >-->
+<!--              <span>BR Report (final)</span>-->
+<!--            </a>-->
+<!--          </li>-->
+<!--          <li class="sidebar-dropdown">-->
+<!--            <a href="{% url 'std' %}" >-->
+<!--              <span>FBA form</span>-->
+<!--            </a>-->
+<!--          </li>-->
             <li class="sidebar-dropdown">
            <a href="{% url 'edit_profile' %}">
               <span>Edit Profile</span>
