--- a/PBSS/users/templates/users/post_confirm_delete.html
+++ b/PBSS/users/templates/users/post_confirm_delete.html
@@ -10,6 +10,8 @@
         <div class="form-group col-md-12">
           <p style="text-align: center;">Manage work on daily basis.</p>
         </div>
+           <a href="{% url 'profile' post.id %}"><i class="fa fa-arrow-circle-left" style="font-size:40px; border: none; float: left; color: blue;"></i></a>
+
       </div>
          <div class="container">
                     <div class="row heading">
