--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -14,9 +14,14 @@
       </div>
          <div class="container">
                     <div class="row heading">
+                        <div class="intro" style="float: right; margin-bottom: 0%;"><a class="btn btn-3 btn-lg" type="submit"
+                                                                                            href="{% url 'client-create' %}" style="float: right; margin-right: 4%;">
+              <span>Add New Client</span></a>
                         <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
+
                           <!--  <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a></p> -->
                             <h2 style="text-align: center;">Client Lists - ({{page_obj.paginator.count}})</h2>
+
                     <br><br>
         <div class="container">
                 {% for post in posts %}
@@ -32,6 +37,9 @@
 
                             <div class="intro" style="line-height: 2;">Comment: {{post.content}}</div>
                     <div class="intro" style="line-height: 2; font-weight: bold;">History: {{post.history}}</div><br>
+                    <div class="intro" style="float: right; margin-left: 1%; "><a class="btn btn-2 btn-lg" type="submit" href="{% url 'profile' post.id %}">Update Information</a></div>
+                       <div class="intro" style="float: right;"><a class="btn btn-2 btn-lg" type="submit" href="{% url 'brreport' %}" > BR Report </a></div>
+                    <div class="intro" style="float: right; margin-right: 1%; ">  <a class="btn btn-2 btn-lg" type="submit" href="{% url 'std' %}" >FBA form </a></div>
                 </div>
 
                 {% endfor %}
@@ -62,17 +70,9 @@
 
         </div>
         </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-
-                </div>
         </div>
-            <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-
-          </div>
-        </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-        </div>
+                    </div>
+         </div>
       </div>
   </main>
     </div>
