--- a/PBSS/contact/templates/contact.html
+++ b/PBSS/contact/templates/contact.html
@@ -8,16 +8,21 @@
                     <div class="row heading">
                         <div class="col-lg-12">
                             <a href="{% url 'index' %}"><i class="fa fa-arrow-circle-left" style="font-size:40px; border: none; float: left; color: blue;"></i></a>
-                            {% if submitted %}
-       <p class="success">
-             Your message was submitted successfully. Thank you.
-        </p>
-                            {% else %}
+
                             <h2>Contact us</h2>
                             <hr>
                             <div class="intro">The support team is here to help, drop us a line.</div>
                         </div>
                     </div>
+                       <div>
+                        {%  if messages %}
+                            {% for message in messages %}
+                               <div class="alert alert-{{ message.tags }}" style="font-size: 25px; text-align: center;">
+                                {{ message }}
+                               </div>
+                            {% endfor %}
+                        {%  endif %}
+                     </div>
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="row box-item">
@@ -51,7 +56,6 @@
                     </div>
                 </div>
             </section>
-{% endif %}
     </div>
 
 
