--- a/PBSS/users/templates/users/post_form.html
+++ b/PBSS/users/templates/users/post_form.html
@@ -1,4 +1,3 @@
-
 {%  extends "users/dashboardbase.html" %}
 {% block content %}
 {% load static %}
@@ -41,9 +40,16 @@
                                  <button class="btn btn-3 btn-sm btn-block" type="submit" href="{% url 'client' %}">Add Client</button>
                                 </div>
                             </form>
+
         <div class="border-top pr-3">
 
             </div></div></div>
+
+
+        </div></div></div></div>
+  </main>
+    </div>
+
                 </div>
         </div>
         </div>
