--- a/PBSS/businessleader/templates/businessleader/userlist.html
+++ b/PBSS/businessleader/templates/businessleader/userlist.html
@@ -1,4 +1,4 @@
-{%  extends "businessleader/dashboard.html" %}
+{%  extends "users/dashboardbase.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
 {% load static %}
