--- a/PBSS/users/templates/users/dashboardbase.html
+++ b/PBSS/users/templates/users/dashboardbase.html
@@ -83,12 +83,22 @@
           </li>
             <li class="sidebar-dropdown">
            <a href="{% url 'client-create' %}">
-              <span>New Client</span>
+              <span>Add New Client</span>
+            </a>
+          </li>
+             <li class="sidebar-dropdown">
+           <a href="{% url 'businessleader' %}">
+              <span>Add Support Worker</span>
             </a>
           </li>
           <li class="sidebar-dropdown">
             <a href="{% url 'chart' %}" >
-              <span>Charts</span>
+              <span>Charts (will be removed)</span>
+            </a>
+          </li>
+            <li class="sidebar-dropdown">
+           <a href="{% url 'supportworker' %}">
+              <span>Support Workers list</span>
             </a>
           </li>
 <!--            <li class="sidebar-dropdown">-->
