--- a/PBSS/businessleader/templates/businessleader/dashboard.html
+++ b/PBSS/businessleader/templates/businessleader/dashboard.html
@@ -69,7 +69,7 @@
         </div>
       </div>
 
-
+    <!-- I am merging, it i do something wrong please let me know we will revert back. -->
       <!-- sidebar-search  -->
       <div class="sidebar-menu">
         <ul>
