--- a/PBSS/form_fba/templates/fbaindex.html
+++ b/PBSS/form_fba/templates/fbaindex.html
@@ -30,14 +30,14 @@
 
         <div class="form-group row">
                 <div class="col-sm-12">
-        <p style="margin-bottom: 2%;">Hello {{ user.username }}, Please Enter your details in FBA form</p>
+        <p style="margin-bottom: 2%;">Hello {{ user.username }}, Please Enter your details in FBA form. Client name is {{ form.client_name }} </p>
                 </div>
         </div>
 
     <div class="form-group row">
 
-        <label class="col-sm-2 col-form-label">User</label>
-        <div class="col-sm-4">{{ form.user }} </div>
+        <label class="col-sm-2 col-form-label"> Client </label>
+        <div class="col-sm-4">{{ form.client }} </div>
 
     </div>
 
