--- a/PBSS/users/templates/users/login.html
+++ b/PBSS/users/templates/users/login.html
@@ -1,4 +1,4 @@
-{%  extends "freefbaform/fbabase.html" %}
+{%  extends "users/dashboardbase.html" %}
 {% block content %}
     {% load static %}
     {% load crispy_forms_tags %}
