--- a/PBSS/form_fba/templates/view.html
+++ b/PBSS/form_fba/templates/view.html
@@ -40,7 +40,7 @@
     <thead class="thead-dark">
     <br><br>
     <tr>
-        <th>User</th>
+        <th>Client</th>
         <th>Antecedent</th>
         <th>Behaviour</th>
         <th>Consequence</th>
